fix mobile version

--- a/yoga/index.html
+++ b/yoga/index.html
@@ -50,13 +50,13 @@
     </section>
 
     <div class="our-classes">
-        <div class="container">
+        <div class="container clearfix">
             <h2>Yoga FEATURE PROGRAM</h2>
             <span>Our Classes</span>
         </div>
         <div class="container clearfix">
-            <div class="classes">
-                <div class="class">
+            <div class="classes clearfix">
+                <div class="class clearfix">
                     <a class="class-img"><img src="img/class-img-1.jpg" alt=""></a>
                     <div class="descr">
                         <a href=""><h6>Yoga For Health</h6></a>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
 
-                <div class="class">
+                <div class="class clearfix">
                     <a class="class-img"><img src="img/class-img-2.jpg" alt=""></a>
                     <div class="descr">
                         <a href=""><h6>Yoga For Lose Weight</h6></a>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="class">
+                <div class="class clearfix">
                     <a class="class-img"><img src="img/class-img-3.jpg" alt=""></a>
                     <div class="descr">
                         <a href=""><h6>Yoga For Children</h6></a>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <div class="class">
+                <div class="class clearfix">
                     <a class="class-img"><img src="img/class-img-4.jpg" alt=""></a>
                     <div class="descr">
                         <a href=""><h6>Yoga For Elderly</h6></a>
