fix sliders and reservation form

--- a/yoga/index.html
+++ b/yoga/index.html
@@ -40,6 +40,8 @@
                     <option value="" disabled selected>Chose your class</option>
                     <option value="">Yoga For Health</option>
                     <option value="">Yoga For Lose Weight</option>
+                    <option value="">Yoga For Children</option>
+                    <option value="">Yoga For Elderly</option>
                 </select><input type="submit" class="submit" value="Try it">
             </form>
             <div class="form-descr clearfix">
