--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Alexander Shatravka</title>
+    <link rel="shortcut icon" href="favicon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,12 +12,28 @@
     <div class="overlay"></div>
     <div class="container">
         <h1 class="works-header">My Works</h1>
+
+        <div class="me">
+            <img src="img/avatar.jpg" alt="" class="photo">
+            <h2 class="name">Alexander Shatravka</h2>
+        </div>
+
         <div class="works-container clearfix">
             <a href="https://alexander-shatravka.github.io/yoga"><img src="img/yoga-demo.jpg" alt=""></a>
             <a href="https://alexander-shatravka.github.io/store"><img src="img/store-demo.jpg" alt=""></a>
             <a href="https://alexander-shatravka.github.io/M-store"><img src="img/m-store-demo.jpg" alt=""></a>
         </div>
-    </div>
+
+        <div class="contact">
+            <h5 class="contact-header">Contact me with:</h5>
+            <ul class="social-links">
+                <li><a href="https://www.linkedin.com/in/alexander-shatravka-b04338151" class="fa  fa-linkedin"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100007205867563" class="fa fa-facebook"></a></li>
+                <li><a href="https://vk.com/shatravgo" class="fa fa-vk"></a></li>
+                <li><a href="skype:live:alexander.shatravka" class="fa fa-skype"></a></li>
+                <li><a href="mailto:alexander.shatravka@gmail.com"  class="fa fa-envelope-o" ></a></li>
+            </ul>
+        </div>
 
 </div>
 
