add resposnive and effects on hover items

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexander Shatravka</title>
     <link rel="shortcut icon" href="favicon.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
 
@@ -19,9 +21,36 @@
         </div>
 
         <div class="works-container clearfix">
-            <a href="https://alexander-shatravka.github.io/yoga"><img src="img/yoga-demo.jpg" alt=""></a>
-            <a href="https://alexander-shatravka.github.io/store"><img src="img/store-demo.jpg" alt=""></a>
-            <a href="https://alexander-shatravka.github.io/M-store"><img src="img/m-store-demo.jpg" alt=""></a>
+
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Yoga</h4>
+                    <p class="descr">Single page responsive web site</p>
+                </div>
+                <a href="https://alexander-shatravka.github.io/yoga">
+                    <img src="img/yoga-demo.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Black & White</h4>
+                    <p class="descr">Minimalistic e-commerce site with full functional on pure JS</p>
+                </div>
+                <a href="https://alexander-shatravka.github.io/store">
+                    <img src="img/store-demo.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">M-store</h4>
+                    <p class="descr">One page of music store site</p>
+                </div>
+                <a href="https://alexander-shatravka.github.io/M-store">
+                    <img src="img/m-store-demo.jpg" alt="">
+                </a>
+            </div>
         </div>
 
         <div class="contact">
@@ -35,7 +64,7 @@
             </ul>
         </div>
 
+    </div>
 </div>
-
 </body>
 </html>
