--- a/store/item.html
+++ b/store/item.html
@@ -94,7 +94,7 @@
                 <a class="button">Add to bag</a>
                 <div class="popup-darkness"></div>
                 <div class="popup">
-                    <span>You add 1 item</span>
+                    <span>You've added 1 item</span>
                     <a class="close-popup"></a>
                     <a class="confirm addingButton">Ok</a>
                 </div>
