--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h4 class="project-name">Yoga</h4>
                     <p class="descr">Single page responsive web site</p>
                 </div>
-                <a href="https://alexander-shatravka.github.io/yoga">
+                <a href="https://alexander-shatravka.github.io/yoga" target="_blank">
                     <img src="img/yoga-demo.jpg" alt="">
                 </a>
             </div>
@@ -37,7 +37,7 @@
                     <h4 class="project-name">Black & White</h4>
                     <p class="descr">Minimalistic e-commerce site with full functional on pure JS</p>
                 </div>
-                <a href="https://alexander-shatravka.github.io/store">
+                <a href="https://alexander-shatravka.github.io/store" target="_blank">
                     <img src="img/store-demo.jpg" alt="">
                 </a>
             </div>
@@ -47,7 +47,7 @@
                     <h4 class="project-name">M-store</h4>
                     <p class="descr">One page of music store site</p>
                 </div>
-                <a href="https://alexander-shatravka.github.io/M-store">
+                <a href="https://alexander-shatravka.github.io/M-store" target="_blank">
                     <img src="img/m-store-demo.jpg" alt="">
                 </a>
             </div>
@@ -56,11 +56,11 @@
         <div class="contact">
             <h5 class="contact-header">Contact me with:</h5>
             <ul class="social-links">
-                <li><a href="https://www.linkedin.com/in/alexander-shatravka-b04338151" class="fa  fa-linkedin"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100007205867563" class="fa fa-facebook"></a></li>
-                <li><a href="https://vk.com/shatravgo" class="fa fa-vk"></a></li>
-                <li><a href="skype:live:alexander.shatravka" class="fa fa-skype"></a></li>
-                <li><a href="mailto:alexander.shatravka@gmail.com"  class="fa fa-envelope-o" ></a></li>
+                <li><a href="https://www.linkedin.com/in/alexander-shatravka-b04338151" class="fa  fa-linkedin" target="_blank"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100007205867563" class="fa fa-facebook" target="_blank"></a></li>
+                <li><a href="https://vk.com/shatravgo" class="fa fa-vk" target="_blank"></a></li>
+                <li><a href="skype:live:alexander.shatravka" class="fa fa-skype" target="_blank"></a></li>
+                <li><a href="mailto:alexander.shatravka@gmail.com"  class="fa fa-envelope-o" target="_blank"></a></li>
             </ul>
         </div>
 
