--- a/Neos/index.html
+++ b/Neos/index.html
@@ -56,7 +56,50 @@
             </div>
         </div>
 
-
+        <div class="price-block">
+            <a href="#" id = "price-anchor" class="anchor"></a>
+            <div class="container">
+                <h3 class="article-header">Цены <span class="bonuses">и бонусы</span>:</h3>
+                <div class="price-items-container clearfix">
+                    <div class="price-item">
+                        <img src="img/tracker.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            Цена трекера  составляет 999грн
+                        </p>
+                    </div>
+                    <div class="price-item">
+                        <img src="img/month.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            Ежемесячная  плата  составляет 125 грн
+                        </p>
+                    </div>
+                    <div class="price-item">
+                        <img src="img/calendar.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            Плата за год <br> (одним платежом) составляет 1250грн
+                        </p>
+                    </div>
+                    <div class="price-item">
+                        <img src="img/wrap.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            Бесплатная  установка
+                        </p>
+                    </div>
+                    <div class="price-item">
+                        <img src="img/action.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            Приведи друга и получи  месяц бесплатно
+                        </p>
+                    </div>
+                    <div class="price-item">
+                        <img src="img/action2.png" alt="" class="item-img">
+                        <p class="item-descr">
+                            2 месяца бесплатно
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="setup-block">
             <a href="#" id = "setup-anchor" class="anchor"></a>
