--- a/Neos/index.html
+++ b/Neos/index.html
@@ -101,7 +101,52 @@
             </div>
         </div>
 
-
+        <div class="setup-block">
+            <a href="#" id = "setup-anchor" class="anchor"></a>
+            <div class="container">
+                <div class="article-block">
+                    <h3 class="article-header right">Вам пришла отличная идея  установить трекер!</h3>
+                    <div class="setup-items-container clearfix">
+                        <div class="setup-item">
+                            <img src="img/call.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Позвоните оператору
+                            </p>
+                        </div>
+                        <div class="setup-item">
+                            <img src="img/garage.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Приедьте на  договорённую  дату и время
+                            </p>
+                        </div>
+                        <div class="setup-item">
+                            <img src="img/coin.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Произведите оплату
+                            </p>
+                        </div>
+                        <div class="setup-item">
+                            <img src="img/display.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Контролируйте  ситуацию
+                            </p>
+                        </div>
+                        <div class="setup-item">
+                            <img src="img/credit-card.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Введите даные  из карты при входе  на сайте
+                            </p>
+                        </div>
+                        <div class="setup-item">
+                            <img src="img/docs.png" alt="" class="item-img">
+                            <p class="item-descr">
+                                Получите пакет документов
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="contact-block">
             <a href="#" id = "contact-anchor" class="anchor"></a>
