--- a/Neos/index.html
+++ b/Neos/index.html
@@ -152,12 +152,12 @@
             <a href="#" id = "contact-anchor" class="anchor"></a>
             <h4 class="contact-header">Контакты</h4>
             <ul class="contacts-list clearfix">
-                <li>тел.<a href="tel:"> 095 333 90 11</a></li>
+                <li>тел.<a href="callto:"> 095 333 90 11</a></li>
                 <li>mail:<a href="mailto:">NeosTrac@gmail.com</a></li>
             </ul>
             <ul class="contacts-list clearfix">
-                <li class="inst-contact"><a href="https://www.instagram.com/neos_trac/">neos_trac</a></li>
-                <li class="fb-contact"><a href="https://www.facebook.com/NeosTracGPS/">NeosTracGPS</a></li>
+                <li class="inst-contact"><a href="https://www.instagram.com/neos_trac/"   target="_blank">neos_trac</a></li>
+                <li class="fb-contact"><a href="https://www.facebook.com/NeosTracGPS/"  target="_blank">NeosTracGPS</a></li>
             </ul>
         </div>
     </div>
