--- a/Neos/index.html
+++ b/Neos/index.html
@@ -152,7 +152,7 @@
             <a href="#" id = "contact-anchor" class="anchor"></a>
             <h4 class="contact-header">Контакты</h4>
             <ul class="contacts-list clearfix">
-                <li>тел.<a href="callto:"> 095 333 90 11</a></li>
+                <li>тел.<a href="tel:095 333 90 11">095 333 90 11</a></li>
                 <li>mail:<a href="mailto:">NeosTrac@gmail.com</a></li>
             </ul>
             <ul class="contacts-list clearfix">
