--- a/Neos/index.html
+++ b/Neos/index.html
@@ -59,7 +59,7 @@
         <div class="price-block">
             <a href="#" id = "price-anchor" class="anchor"></a>
             <div class="container">
-                <h3 class="article-header">Цены <span class="bonuses">и бонусы</span>:</h3>
+                <h3 class="article-header">Цены <span class="dots">:</span><span class="bonuses">и бонусы:</span></h3>
                 <div class="price-items-container clearfix">
                     <div class="price-item">
                         <img src="img/tracker.png" alt="" class="item-img">
