--- a/Neos/index.html
+++ b/Neos/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="tracking-button-block">
-                    <a href="" class="tracking-button">Отследить</a>
+                    <a href="http://neos.in.ua/server/" class="tracking-button">Отследить</a>
                 </div>
             </div>
         </div>
