addin a neos-project

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                     <img src="img/m-store-demo.jpg" alt="">
                 </a>
             </div>
+
+            <div class="work-item">
+                <div class="caption">
+                    <h4 class="project-name">Neos</h4>
+                    <p class="descr">Responsive landing page</p>
+                </div>
+                <a href="https://neos.in.ua" target="_blank">
+                    <img src="img/neos-demo.jpg" alt="">
+                </a>
+            </div>
         </div>
 
         <div class="contact">
