--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h4 class="project-name">Neos</h4>
                     <p class="descr">Responsive landing page</p>
                 </div>
-                <a href="https://neos.in.ua" target="_blank">
+                <a href="http://neos.in.ua/" target="_blank">
                     <img src="img/neos-demo.jpg" alt="">
                 </a>
             </div>
