--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
     <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body>
-
 <div id="wrapper">
     <div class="overlay"></div>
+
+    <aside class="sidebar">
+        <i class="close"></i>
+        <div class="photo-large"><img src="img/avatar-large.jpg" alt=""></div>
+
+        <div class="about">
+            <h3>Web UI Developer</h3>
+            <p>Hi, I've been  working with Web UI about 1 year. Here is a page where you can view my works and contact me.</p>
+        </div>
+
+        <ul class="skills">
+            <li class="skill-ico js"></li>
+            <li class="skill-ico jquery"></li>
+            <li class="skill-ico html-css"></li>
+            <li class="skill-ico ps"></li>
+        </ul>
+    </aside>
+
     <div class="container">
         <h1 class="works-header">My Works</h1>
 
@@ -44,6 +61,16 @@
 
             <div class="work-item">
                 <div class="caption">
+                    <h4 class="project-name">Neos</h4>
+                    <p class="descr">Responsive landing page</p>
+                </div>
+                <a href="http://neos.in.ua/" target="_blank">
+                    <img src="img/neos-demo.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="work-item">
+                <div class="caption">
                     <h4 class="project-name">M-store</h4>
                     <p class="descr">One page of music store site</p>
                 </div>
@@ -52,29 +79,23 @@
                 </a>
             </div>
 
-            <div class="work-item">
-                <div class="caption">
-                    <h4 class="project-name">Neos</h4>
-                    <p class="descr">Responsive landing page</p>
-                </div>
-                <a href="http://neos.in.ua/" target="_blank">
-                    <img src="img/neos-demo.jpg" alt="">
-                </a>
-            </div>
         </div>
 
         <div class="contact">
             <h5 class="contact-header">Contact me with:</h5>
             <ul class="social-links">
+                <li><a href="tel:+380955838911"  class="fa fa-phone" target="_blank"></a></li>
+                <li><a href="mailto:alexander.shatravka@gmail.com"  class="fa fa-envelope-o" target="_blank"></a></li>
+                <li><a href="skype:live:alexander.shatravka" class="fa fa-skype" target="_blank"></a></li>
                 <li><a href="https://www.linkedin.com/in/alexander-shatravka-b04338151" class="fa  fa-linkedin" target="_blank"></a></li>
                 <li><a href="https://www.facebook.com/profile.php?id=100007205867563" class="fa fa-facebook" target="_blank"></a></li>
                 <li><a href="https://vk.com/shatravgo" class="fa fa-vk" target="_blank"></a></li>
-                <li><a href="skype:live:alexander.shatravka" class="fa fa-skype" target="_blank"></a></li>
-                <li><a href="mailto:alexander.shatravka@gmail.com"  class="fa fa-envelope-o" target="_blank"></a></li>
             </ul>
         </div>
-
     </div>
 </div>
+
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
