--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="about">
             <h3>Web UI Developer</h3>
-            <p>Hi, I've been  working with Web UI about 1 year. Here is a page where you can view my works and contact me.</p>
+            <p>Hi, I've been  practicing with Web UI and Frontend Development about 1 year. Here is a page where you can view my works and contact me.</p>
         </div>
 
         <ul class="skills">
