hide sidebar on click around it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="overlay"></div>
 
     <aside class="sidebar">
+        <!--<div class="sidebar-overlay"></div>-->
         <i class="close"></i>
         <div class="photo-large"><img src="img/avatar-large.jpg" alt=""></div>
 
