--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="work-item">
                 <div class="caption">
                     <h4 class="project-name">Black & White</h4>
-                    <p class="descr">Minimalistic e-commerce site with full functional on pure JS</p>
+                    <p class="descr">Minimalistic e-commerce site with full functionality on pure JS</p>
                 </div>
                 <a href="https://alexander-shatravka.github.io/store" target="_blank">
                     <img src="img/store-demo.jpg" alt="">
