--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     <div class="overlay"></div>
 
     <aside class="sidebar">
-        <!--<div class="sidebar-overlay"></div>-->
-        <i class="close"></i>
-        <div class="photo-large"><img src="img/avatar-large.jpg" alt=""></div>
+        <div class="sidebar-overlay">
+            <i class="close"></i>
+            <div class="photo-large"><img src="img/avatar-large.jpg" alt=""></div>
 
-        <div class="about">
-            <h3>Web UI Developer</h3>
-            <p>Hi, I've been  practicing with Web UI and Frontend Development about 1 year. Here is a page where you can view my works and contact me.</p>
+            <div class="about">
+                <h3>Web UI Developer</h3>
+                <p>Hi, I've been  practicing with Web UI and Frontend Development about 1 year. Here is a page where you can view my works and contact me.</p>
+            </div>
+
+            <ul class="skills">
+                <li class="skill-ico js"></li>
+                <li class="skill-ico jquery"></li>
+                <li class="skill-ico html-css"></li>
+                <li class="skill-ico ps"></li>
+            </ul>
         </div>
-
-        <ul class="skills">
-            <li class="skill-ico js"></li>
-            <li class="skill-ico jquery"></li>
-            <li class="skill-ico html-css"></li>
-            <li class="skill-ico ps"></li>
-        </ul>
     </aside>
 
     <div class="container">
