--- a/Neos/index.html
+++ b/Neos/index.html
@@ -64,48 +64,41 @@
                     <div class="price-item">
                         <img src="img/tracker.png" alt="" class="item-img">
                         <p class="item-descr">
-                            Цена трекера  составляет 999грн
+                            Цена трекера  составляет 800грн
                         </p>
                     </div>
                     <div class="price-item">
                         <img src="img/month.png" alt="" class="item-img">
                         <p class="item-descr">
-                            Ежемесячная  плата  составляет 125 грн
+                            Ежемесячная  плата  составляет 80 грн <br>
+                            (при оплате за год)
                         </p>
                     </div>
                     <div class="price-item">
-                        <img src="img/calendar.png" alt="" class="item-img">
+                        <img src="img/precent-badge.png" alt="" class="item-img">
                         <p class="item-descr">
-                            Плата за год <br> (одним платежом) составляет 1250грн
+                            Широкая система скидок и бонусов
                         </p>
                     </div>
-                    <div class="price-item">
-                        <img src="img/wrap.png" alt="" class="item-img">
-                        <p class="item-descr">
-                            Бесплатная  установка
-                        </p>
-                    </div>
-                    <div class="price-item">
-                        <img src="img/action.png" alt="" class="item-img">
-                        <p class="item-descr">
-                            Приведи друга и получи  месяц бесплатно
-                        </p>
-                    </div>
-                    <div class="price-item">
-                        <img src="img/action2.png" alt="" class="item-img">
-                        <p class="item-descr">
-                            2 месяца бесплатно
-                        </p>
-                    </div>
+                    <ul class="description"><span>* Есть 2 варианта оплаты:</span>
+                        <li>- Погодовая оплата 1000грн/год(80грн/мес)</li>
+                        <li>- Помесячная оплата 100грн/мес(1200грн/год)</li>
+                    </ul>
                 </div>
             </div>
+        </div>
+
+        <div class="video-block container">
+            <video controls>
+                <source src="video/neos-present.mp4">
+            </video>
         </div>
 
         <div class="setup-block">
             <a href="#" id = "setup-anchor" class="anchor"></a>
             <div class="container">
                 <div class="article-block">
-                    <h3 class="article-header right">Вам пришла отличная идея  установить трекер!</h3>
+                    <h3 class="article-header right text-right">Вам пришла отличная идея  установить трекер!</h3>
                     <div class="setup-items-container clearfix">
                         <div class="setup-item">
                             <img src="img/call.png" alt="" class="item-img">
