--- a/Neos/index.html
+++ b/Neos/index.html
@@ -98,7 +98,7 @@
             <a href="#" id = "setup-anchor" class="anchor"></a>
             <div class="container">
                 <div class="article-block">
-                    <h3 class="article-header right text-right">Вам пришла отличная идея  установить трекер!</h3>
+                    <h3 class="article-header left">Вам пришла отличная идея  установить трекер!</h3>
                     <div class="setup-items-container clearfix">
                         <div class="setup-item">
                             <img src="img/call.png" alt="" class="item-img">
