--- a/Neos/index.html
+++ b/Neos/index.html
@@ -156,7 +156,90 @@
     </div>
 </div>
 
+
+
+<!-->Hidden content for dynamic-content.js<-->
+
+<div class="setup-items-container clearfix" id="mobile-setup">
+    <div class="setup-item">
+        <img src="img/call.png" alt="" class="item-img">
+        <p class="item-descr">
+            Позвоните оператору
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/garage.png" alt="" class="item-img">
+        <p class="item-descr">
+            Приедьте на  договорённую  дату и время
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/docs.png" alt="" class="item-img">
+        <p class="item-descr">
+            Получите пакет документов
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/coin.png" alt="" class="item-img">
+        <p class="item-descr">
+            Произведите оплату
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/credit-card.png" alt="" class="item-img">
+        <p class="item-descr">
+            Введите даные  из карты при входе  на сайте
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/display.png" alt="" class="item-img">
+        <p class="item-descr">
+            Контролируйте  ситуацию
+        </p>
+    </div>
+</div>
+
+<div class="setup-items-container clearfix" id="desktop-setup">
+    <div class="setup-item">
+        <img src="img/call.png" alt="" class="item-img">
+        <p class="item-descr">
+            Позвоните оператору
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/garage.png" alt="" class="item-img">
+        <p class="item-descr">
+            Приедьте на  договорённую  дату и время
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/coin.png" alt="" class="item-img">
+        <p class="item-descr">
+            Произведите оплату
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/display.png" alt="" class="item-img">
+        <p class="item-descr">
+            Контролируйте  ситуацию
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/credit-card.png" alt="" class="item-img">
+        <p class="item-descr">
+            Введите даные  из карты при входе  на сайте
+        </p>
+    </div>
+    <div class="setup-item">
+        <img src="img/docs.png" alt="" class="item-img">
+        <p class="item-descr">
+            Получите пакет документов
+        </p>
+    </div>
+</div>
+
 <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
 <script type="text/javascript" src="js/anchors.js"></script>
+<script type="text/javascript" src="js/dynamic-content.js"></script>
 </body>
 </html>
