--- a/Neos/index.html
+++ b/Neos/index.html
@@ -158,7 +158,7 @@
 
 
 
-<!-->Hidden content for dynamic-content.js<-->
+<!--Hidden content for dynamic-content.js-->
 
 <div class="setup-items-container clearfix" id="mobile-setup">
     <div class="setup-item">
