--- a/CashYouPrelend/index.html
+++ b/CashYouPrelend/index.html
@@ -176,7 +176,7 @@
 		<button type="button" class="slick-prev"><i class="icon-arrow-right rotate"></i><span>Назад</span></button>
 		<button type="button" class="slick-next"><span>Вперед</span><i class="icon-arrow-right"></i></button>
 	</div>
-	<a href="https://cashyou.ua/" class="button mobile-center">Подробнее</a> 
+	<a href="https://cashyou.ua/" class="button">Подробнее</a> 
 </div>
 
 <script src="js/libs.min.js"></script>
