--- a/CashYouPrelend/index.html
+++ b/CashYouPrelend/index.html
@@ -179,6 +179,7 @@
 	<a href="https://cashyou.ua/" class="button">Подробнее</a> 
 </div>
 
+<div id="requests"></div>
 <script src="js/libs.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/common.js"></script>
