--- a/CashYouPrelend/index.html
+++ b/CashYouPrelend/index.html
@@ -65,9 +65,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						</h2>	
 						<div class="line-holder">
 							<div class="line-slider"><span class="minus-slider minus-slider1"></span>
-								<span class="min-amount"></span>
-								<span class="minus-slider minus-slider1"></span><div id="slider" data-input="#loan_application_amount" data-step="100" data-default="6000" data-min="100" data-max="12000" data-max-wiht-discount="1000" class="slider amount"></div><span class="plus-slider plus-slider1"></span>
-								<span class="max-amount"></span>
+								<div id="slider" data-input="#loan_application_amount" data-step="100" data-default="1000" data-min="100" data-max="2000" data-max-wiht-discount="1000" class="slider amount"></div><span class="plus-slider plus-slider1"></span>
 							</div>
 						</div>
 						<span class="descr">[ быстрые кредиты от 100 до 12000 грн ]</span>
