--- a/arigato/index.html
+++ b/arigato/index.html
@@ -21,11 +21,11 @@
 			<nav>
 				<ul class="main-nav">
 					<span id="slide-line"></span>
-					<li><a href="catalog.html">Каталог<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">О нас<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Контакты<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Доставка<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Скидки<i class="fa fa-angle-down"></i></a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="catalog.html">О нас</a></li>
+					<li><a href="catalog.html">Контакты</a></li>
+					<li><a href="catalog.html">Доставка</a></li>
+					<li><a href="catalog.html">Скидки</a></li>
 				</ul>
 			</nav>
 			<a href= ""class="cart-icon">
@@ -37,62 +37,40 @@
 	<section class="intro-section">
 		<div class="slick-slider">
 			<div class="slide slide-1">
-				<h2 class="heading">
-					<div class="left"><span>Philadelfia</span></div>
-					<div class="right"><span>Set</span></div>
-				</h2>
-				<div class="img-full"><img src="img/item-1-full.jpg" alt=""></div>
-				<ul class="item-info">
-					<li class="col">150<span>грамм</span></li>
-					<li class="col">320<span>каллорий</span></li>
-					<li class="col">200<span>гр. рыбы</span></li>
-					<li class="col">50%<span>50%</span></li>
-					<li class="col">150<span>грн</span></li>
-				</ul>
+				<div class="slide-content">
+					<h2 class="heading">
+						<div class="left"><span>Суши</span></div>
+						<div class="right"><span>Угорь</span></div>
+					</h2>
+					<div class="img"><img src="img/sushi-roll.png" alt=""></div>
+				</div>
 			</div>
 			<div class="slide slide-2">
-				<h2 class="heading">
-					<div class="left"><span>Philadelfia</span></div>
-					<div class="right"><span>Set</span></div>
-				</h2>
-				<div class="img-full"><img src="img/item-2-full.jpg" alt=""></div>
-				<ul class="item-info">
-					<li class="col">150<span>грамм</span></li>
-					<li class="col">320<span>каллорий</span></li>
-					<li class="col">200<span>гр. рыбы</span></li>
-					<li class="col">50%<span>50%</span></li>
-					<li class="col">150<span>грн</span></li>
-				</ul>
+				<div class="slide-content">
+					<h2 class="heading">
+						<div class="left"><span>Суши</span></div>
+						<div class="right"><span>Угорь</span></div>
+					</h2>
+					<div class="img"><img src="img/sushi-roll.png" alt=""></div>
+				</div>
 			</div>
 			<div class="slide slide-3">
-				<h2 class="heading">
-					<div class="left"><span>Philadelfia</span></div>
-					<div class="right"><span>Set</span></div>
-				</h2>
-				<div class="img-full"><img src="img/item-3-full.jpg" alt=""></div>
-				<ul class="item-info">
-					<li class="col">150<span>грамм</span></li>
-					<li class="col">320<span>каллорий</span></li>
-					<li class="col">200<span>гр. рыбы</span></li>
-					<li class="col">50%<span>50%</span></li>
-					<li class="col">150<span>грн</span></li>
-				</ul>
-			</div>
-			<div class="slide slide-4">
-				<h2 class="heading">
-					<div class="left"><span>Philadelfia</span></div>
-					<div class="right"><span>Set</span></div>
-				</h2>
-				<div class="img-full"><img src="img/item-4-full.jpg" alt=""></div>
-				<ul class="item-info">
-					<li class="col">150<span>грамм</span></li>
-					<li class="col">320<span>каллорий</span></li>
-					<li class="col">200<span>гр. рыбы</span></li>
-					<li class="col">50%<span>50%</span></li>
-					<li class="col">150<span>грн</span></li>
-				</ul>
+				<div class="slide-content">
+					<h2 class="heading">
+						<div class="left"><span>Суши</span></div>
+						<div class="right"><span>Угорь</span></div>
+					</h2>
+					<div class="img"><img src="img/sushi-roll.png" alt=""></div>
+				</div>	
 			</div>
 		</div>
+		<ul class="item-info">
+			<li class="col">150<span>грамм</span></li>
+			<li class="col">320<span>каллорий</span></li>
+			<li class="col">200<span>гр. рыбы</span></li>
+			<li class="col">50%<span>50%</span></li>
+			<li class="col">150<span>грн</span></li>
+		</ul>
 	</section>
 	<section class="live-section">
 		<div class="live-wrapper">
