--- a/arigato/item.html
+++ b/arigato/item.html
@@ -22,11 +22,11 @@
 			<nav>
 				<ul class="main-nav">
 					<span id="slide-line"></span>
-					<li><a href="catalog.html">Каталог<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">О нас<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Контакты<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Доставка<i class="fa fa-angle-down"></i></a></li>
-					<li><a href="catalog.html">Скидки<i class="fa fa-angle-down"></i></a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="catalog.html">О нас</a></li>
+					<li><a href="catalog.html">Контакты</a></li>
+					<li><a href="catalog.html">Доставка</a></li>
+					<li><a href="catalog.html">Скидки</a></li>
 				</ul>
 			</nav>
 			<a href= ""class="cart-icon">
