--- a/arigato/index.html
+++ b/arigato/index.html
@@ -17,7 +17,7 @@
 <div id="wrapper">
 	<header>
 		<div class="container">
-			<a href="home.html" id="logo">Arigato</a>
+			<a href="index.html" id="logo">Arigato</a>
 			<nav>
 				<ul class="main-nav">
 					<span id="slide-line"></span>
