--- a/arigato/catalog.html
+++ b/arigato/catalog.html
@@ -29,6 +29,7 @@
 					<li><a href="catalog.html">Скидки</a></li>
 				</ul>
 			</nav>
+			<div class="phone"><a href="tel:0501123123">0501123123</a></div>
 			<a href= ""class="cart-icon">
 				<i class="fas fa-shopping-cart"></i>
 				<span class="items-in-bag">1</span>
