--- a/arigato/index.html
+++ b/arigato/index.html
@@ -28,6 +28,7 @@
 					<li><a href="catalog.html">Скидки</a></li>
 				</ul>
 			</nav>
+			<div class="phone"><a href="tel:0501123123"><i class="fas fa-phone"></i>0501123123</a></div>
 			<a href= ""class="cart-icon">
 				<i class="fas fa-shopping-cart"></i>
 				<span class="items-in-bag">1</span>
@@ -71,23 +72,28 @@
 			<li class="col">50%<span>50%</span></li>
 			<li class="col">150<span>грн</span></li>
 		</ul>
+		<!--<ul class="social-intro">
+			<li><a href="" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+			<li><a href="" class="instagram"><i class="fab fa-instagram"></i></a></li>
+			<li><a href="" class="youtube"><i class="fab fa-youtube"></i></a></li>
+		</ul>-->
 	</section>
 	<section class="live-section">
-		<div class="live-wrapper">
-			<aside  class="live-menu">
+			<!--<aside  class="live-menu">
 				<ul>
 					<li>Трансляция</li>
 					<li>Live</li>
 					<li>Sushi</li>
 				</ul>
-			</aside>
+			</aside>-->
 			<div class="live-video">
-				<div class="play-button"><i class="fa fa-play"></i></div>
+				<iframe width="100%" height=100%" src="https://www.youtube.com/embed/lMeA_UJRAEQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<!--<div class="play-button"><i class="fa fa-play"></i></div>-->
 			</div>
 		</div>
 	</section>
 	<section class="catalog-presentation">
-		<div class="catalog-presentation-wrapper"></div>
+		<div class="catalog-presentation-wrapper container"></div>
 	</section>
 	<section class="link-section">
 		<div class="container">
