--- a/arigato/catalog.html
+++ b/arigato/catalog.html
@@ -53,6 +53,10 @@
 				<div class="category filter-block">
 					<h6>Категория</h6>
 					<ul>
+						<li>
+							<input class= "styled-checkbox" type="checkbox" id="all" name="all" value="all" checked/>
+							<label for="all">Все товары</label>
+						</li>
 					    <li>
 							<input class= "styled-checkbox" type="checkbox" id="sushi" name="sushi" value="sushi"/>
 							<label for="sushi">Суши</label>
